tests/parser-test-files/bad-files/parse-continue.5.error
error: Invalid label in continue
  --> test:6:42
   |
 6 |          (let ((continuer (fn () (continue :blech))))
   |                                            ^^^^^^ label not found in any enclosing loop
