tests/parser-test-files/bad-files/parse-continue.5.coal
;; BAD: Parse Continue
(package test-parser)

(define f
  (loop :blech
        (let ((continuer (fn () (continue :blech))))
          (continuer))))

